Fixing the spacing between the promo description elements

--- a/Hair Day/css/styles.css
+++ b/Hair Day/css/styles.css
@@ -130,7 +130,7 @@ main{
     grid-template-rows: 33,333% 33,333% 33,333%;
     grid-template-columns: 20% 80%;
 
-    height: 23em;
+    height: 25em;
 
     border: 0.5em solid var(--secondary-color);
 }
@@ -171,7 +171,7 @@ main{
 
     color: var(--secondary-color);
 
-    margin: 2em 0 2em 0;
+    margin: 1em 0 2em 0;
 
 }
 
@@ -194,15 +194,18 @@ main{
     justify-self: center;
 
     border-radius: 10em;
-    border: 0.4em var(--secondary-color) solid;
-    background-color: transparent;
+    border: 0.15em var(--secondary-color) dashed;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
+
+    font-size: 0.95em;
+
+    margin: 0.5em 0 0 0;
 
   
 }
 
 .promo-description button:hover{
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
     transform: scale(1.2);
     transition: 0.5s;
 }
